@@ -5,6 +5,7 @@ import lombok.Data;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Data
 @AllArgsConstructor
@@ -14,22 +15,12 @@ public class FilesDTO {
     private String folderPath;
 
     public String getImageURL(){
-        try {
-            return URLEncoder.encode(folderPath + "/" + uuid + "_" + fileName, "UTF-8");
-        } catch (UnsupportedEncodingException e){
-            e.printStackTrace();
-        }
+        return URLEncoder.encode(folderPath + "/" + uuid + "_" + fileName, StandardCharsets.UTF_8);
 
-        return "";
     }
 
     public String getThumbnailURL(){
-        try {
-            return URLEncoder.encode(folderPath + "/s_" + uuid + "_" + fileName, "UTF-8");
-        } catch (UnsupportedEncodingException e){
-            e.printStackTrace();
-        }
+        return URLEncoder.encode(folderPath + "/s_" + uuid + "_" + fileName, StandardCharsets.UTF_8);
 
-        return "";
     }
 }
